Continuação do curso

--- a/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
+++ b/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "JwtKey": "3cd465bd-0326-45ea-abc1-ab2c289825c8",
+  "ApiKeyName": "api_key",
+  "ApiKey": "curso_api",
+  "Smtp": {
+    "Host": "smtp.sendgrid.net",
+    "Port": "587",
+    "UserName": "apikey",
+    "Password": "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"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
