--- a/Fundamentos_do_ASP.NET_6/Blog/Blog.csproj
+++ b/Fundamentos_do_ASP.NET_6/Blog/Blog.csproj
@@ -14,10 +14,15 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
+    <PackageReference Include="SecureIdentity" Version="1.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Remove="ViewModels\EditCategoryViewModel.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwrot\Images" />
   </ItemGroup>
 
 </Project>
