--- a/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
+++ b/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
@@ -6,7 +6,7 @@
     "Host": "smtp.sendgrid.net",
     "Port": "587",
     "UserName": "apikey",
-    "Password": "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"
+    "Password": "senha"
   },
   "Logging": {
     "LogLevel": {
