--- a/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
+++ b/Fundamentos_do_ASP.NET_6/Blog/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Env": "prod",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Blog;User ID=sa;Password=caab@1987;TrustServerCertificate=True"
+  },
   "JwtKey": "3cd465bd-0326-45ea-abc1-ab2c289825c8",
   "ApiKeyName": "api_key",
   "ApiKey": "curso_api",
